gnovm/tests/files/convert4.gno
package main

func main() {
	println(int(nil))
}

// error: cannot convert (undefined) to int
